# structure_opengl

./: .gitignore  CMakeLists.txt
Shader/: fragment.frag  vertex.vert
include/glad/: glad.h
include/utils/: base_shape.hpp  camera.hpp  gl_vertices.hpp  mutil_dimasion_data.hpp  shader.hpp  sphere.hpp  type.hpp
src/: CMakeLists.txt  glad.c  main.cpp
